--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>722</width>
-    <height>435</height>
+    <width>841</width>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,7 +44,7 @@
       <property name="childrenCollapsible">
        <bool>false</bool>
       </property>
-      <widget class="WidgetTreeView" name="treeView" native="true"/>
+      <widget class="WidgetTreeView" name="widgetSocketView" native="true"/>
       <widget class="WidgetTabPages" name="tabPages" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -58,6 +58,9 @@
        <property name="contextMenuPolicy">
         <enum>Qt::CustomContextMenu</enum>
        </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
       </widget>
      </widget>
     </item>
@@ -68,7 +71,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>722</width>
+     <width>841</width>
      <height>21</height>
     </rect>
    </property>
