--- a/Widget/widgettabcontent.ui
+++ b/Widget/widgettabcontent.ui
@@ -161,7 +161,7 @@ p, li { white-space: pre-wrap; }
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout">
              <property name="spacing">
-              <number>12</number>
+              <number>24</number>
              </property>
              <property name="leftMargin">
               <number>12</number>
@@ -189,17 +189,25 @@ p, li { white-space: pre-wrap; }
               </widget>
              </item>
              <item>
-              <spacer name="horizontalSpacer">
+              <spacer name="horizontalSpacer_3">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
-                 <width>513</width>
+                 <width>40</width>
                  <height>20</height>
                 </size>
                </property>
               </spacer>
+             </item>
+             <item>
+              <widget class="QComboBox" name="cbbCodeType">
+               <property name="styleSheet">
+                <string notr="true">min-width: 5em;
+color: #666666;</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
