--- a/resources/qss/style.qss
+++ b/resources/qss/style.qss
@@ -258,6 +258,26 @@ QMenuBar::item::selected
     border-radius: 0.2em;;
 }
 
+QMenu
+{
+    background-color : #fefefe;
+    padding:2px;
+}
+
+QMenu::item
+{
+    color: #333333;
+    background-color: transparent;
+    min-height: 2.4em;
+    padding-left: 1em;
+    margin: 4px 1px;
+    min-width: 12em; /* 自动撑大 QMenu */
+}
+
+QMenu::item:selected  {
+    background-color: #f2f3f5;
+}
+
 /* QComboBox */
 QComboBox
 {
