--- a/Widget/widgettabcontent.ui
+++ b/Widget/widgettabcontent.ui
@@ -108,6 +108,9 @@
           </property>
           <item row="0" column="0">
            <widget class="QTextBrowser" name="tbDatas">
+            <property name="contextMenuPolicy">
+             <enum>Qt::NoContextMenu</enum>
+            </property>
             <property name="styleSheet">
              <string notr="true">border: none;</string>
             </property>
